@@ -2,7 +2,8 @@ THIS CHANGELOG IS AN ATTEMPT TO DOCUMENT CHANGES TO THIS PROJECT.
 
 PL-node-v0.15.1
 - FIX: Resolve issue with styleModifiers not being replaced when the partial has spaces in it.
-- THX: Thanks @theorise for the issue report!
+- ADD: Support multiple styleModifier classes using the | pipe syntax
+- THX: Thanks @theorise for the issue reports!
 
 PL-node-v0.15.0
 - CHG: Updated package.json devDependencies for Node 4.X and 5.X support.
